Working on lab_3

--- a/lab/lab_1.ipynb
+++ b/lab/lab_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu May 23 21:07:52 2024       \n",
+      "Fri May 24 12:16:10 2024       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 555.85                 Driver Version: 555.85         CUDA Version: 12.5     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -51,7 +51,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA T500                  WDDM  |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   61C    P0             N/A / ERR!  |       0MiB /   2048MiB |      0%      Default |\n",
+      "| N/A   59C    P8             N/A / ERR!  |      51MiB /   2048MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -60,7 +60,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|  No running processes found                                                             |\n",
+      "|    0   N/A  N/A      8988    C+G   ...8bbwe\\SnippingTool\\SnippingTool.exe      N/A      |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
