--- a/lab/lab_3.ipynb
+++ b/lab/lab_3.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, StratifiedKFold, GridSearchCV, RepeatedStratifiedKFold\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -21,46 +22,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    feature1  feature2  label\n",
-      "0          1         5      0\n",
-      "1          2         4      1\n",
-      "2          3         3      0\n",
-      "3          4         2      1\n",
-      "4          9         1      0\n",
-      "5          2         3      1\n",
-      "6          1         4      0\n",
-      "7          3         1      1\n",
-      "8          5         8      0\n",
-      "9          5         9      1\n",
-      "10        12        10      0 \n",
+      "       0    1    2    3               4\n",
+      "0    5.1  3.5  1.4  0.2     Iris-setosa\n",
+      "1    4.9  3.0  1.4  0.2     Iris-setosa\n",
+      "2    4.7  3.2  1.3  0.2     Iris-setosa\n",
+      "3    4.6  3.1  1.5  0.2     Iris-setosa\n",
+      "4    5.0  3.6  1.4  0.2     Iris-setosa\n",
+      "..   ...  ...  ...  ...             ...\n",
+      "145  6.7  3.0  5.2  2.3  Iris-virginica\n",
+      "146  6.3  2.5  5.0  1.9  Iris-virginica\n",
+      "147  6.5  3.0  5.2  2.0  Iris-virginica\n",
+      "148  6.2  3.4  5.4  2.3  Iris-virginica\n",
+      "149  5.9  3.0  5.1  1.8  Iris-virginica\n",
       "\n",
-      "X_test =  (3, 2)\n",
-      "Y_test =  (3,)\n",
-      "X_train =  (8, 2)\n",
-      "Y_train =  (8,)\n"
+      "[150 rows x 5 columns]\n",
+      "\n",
+      "X_test =  (30, 4)\n",
+      "Y_test =  (30,)\n",
+      "X_train =  (120, 4)\n",
+      "Y_train =  (120,)\n"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame({\n",
-    "    'feature1': [1, 2, 3, 4, 9, 2, 1, 3, 5, 5, 12],\n",
-    "    'feature2': [5, 4, 3, 2, 1, 3, 4, 1, 8, 9, 10],\n",
-    "    'label': [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
-    "})\n",
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "df = pd.read_csv(url, header=None)\n",
     "\n",
-    "print (df, \"\\n\")\n",
+    "print(df)\n",
     "\n",
-    "X = df[['feature1', 'feature2']]\n",
-    "y = df['label']\n",
+    "data = df.values\n",
+    "X = data[:,:-1]\n",
+    "y = data[:,-1] # etykiety\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0) # test_size -> 80% training and 20% test\n",
-    "print (\"X_test = \", X_test.shape)\n",
+    "print (\"\\nX_test = \", X_test.shape)\n",
     "print (\"Y_test = \", y_test.shape,)\n",
     "print (\"X_train = \", X_train.shape)\n",
     "print (\"Y_train = \", y_train.shape)"
@@ -68,53 +70,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 0 (6 w TS, 2 w VS)\n",
-      "[1 3 4 5 6 7]\n",
-      "Fold 1 (6 w TS, 2 w VS)\n",
-      "[0 2 4 5 6 7]\n",
-      "Fold 2 (6 w TS, 2 w VS)\n",
-      "[0 1 2 3 6 7]\n",
-      "Fold 3 (6 w TS, 2 w VS)\n",
-      "[0 1 2 3 4 5]\n",
+      "Fold 0 (90 w TS, 30 w VS)\n",
+      "[ 25  26  27  29  30  32  33  34  35  36  37  40  41  43  44  45  46  47\n",
+      "  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65\n",
+      "  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83\n",
+      "  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119]\n",
+      "Fold 1 (90 w TS, 30 w VS)\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  28  31  38  39  42  51  55  56  59  60  62\n",
+      "  64  65  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83\n",
+      "  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119]\n",
+      "Fold 2 (90 w TS, 30 w VS)\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  52  53  54\n",
+      "  57  58  61  63  66  67  86  89  90  91  92  93  94  95  96  99 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119]\n",
+      "Fold 3 (90 w TS, 30 w VS)\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71\n",
+      " 72 73 74 75 76 77 78 79 80 81 82 83 84 85 87 88 97 98]\n",
       "\n",
       "Cross-Validation Scores: \n",
-      " [0.5 0.5 0.5 1. ]\n",
-      "Mean Cross-Validation Score:  0.625\n",
+      " [0.96666667 0.93333333 1.         0.93333333]\n",
+      "Mean Cross-Validation Score:  0.9583333333333333\n",
       "\n",
       "Best Hyperparameters: \n",
       " {'var_smoothing': 1e-09}\n",
       "\n",
       "Test Set Predictions: \n",
-      " [0 0 1]\n",
+      " ['Iris-virginica' 'Iris-versicolor' 'Iris-setosa' 'Iris-virginica'\n",
+      " 'Iris-setosa' 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor'\n",
+      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
+      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-setosa'\n",
+      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-setosa' 'Iris-setosa'\n",
+      " 'Iris-virginica' 'Iris-versicolor' 'Iris-setosa' 'Iris-setosa'\n",
+      " 'Iris-virginica' 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor'\n",
+      " 'Iris-versicolor' 'Iris-setosa']\n",
       "\n",
       "Class Priors: \n",
-      " [0.5 0.5]\n",
+      " [0.325      0.30833333 0.36666667]\n",
       "\n",
       "Means: \n",
-      " [[4.75 6.75]\n",
-      " [2.75 2.5 ]]\n",
+      " [[5.02051282 3.4025641  1.46153846 0.23846154]\n",
+      " [5.88648649 2.76216216 4.21621622 1.32432432]\n",
+      " [6.63863636 2.98863636 5.56590909 2.03181818]]\n",
       "\n",
       "Classification Report: \n",
-      "               precision    recall  f1-score   support\n",
+      "                  precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      0.50      0.50         2\n",
-      "           1       0.00      0.00      0.00         1\n",
+      "    Iris-setosa       1.00      1.00      1.00        11\n",
+      "Iris-versicolor       0.93      1.00      0.96        13\n",
+      " Iris-virginica       1.00      0.83      0.91         6\n",
       "\n",
-      "    accuracy                           0.33         3\n",
-      "   macro avg       0.25      0.25      0.25         3\n",
-      "weighted avg       0.33      0.33      0.33         3\n",
+      "       accuracy                           0.97        30\n",
+      "      macro avg       0.98      0.94      0.96        30\n",
+      "   weighted avg       0.97      0.97      0.97        30\n",
       "\n",
       "\n",
       "Cross-Validation Scores: \n",
-      " [0.66666667 0.66666667 0.66666667 0.5       ]\n",
-      "Mean Cross-Validation Score:  0.625\n"
+      " [0.94736842 0.94736842 0.91891892 1.        ]\n",
+      "Mean Cross-Validation Score:  0.9534139402560455\n"
      ]
     }
    ],
@@ -123,7 +149,7 @@
     "# Dzielimy na k równych podzbiorów (w których każdy z podzbiorów raz występuje jako zbiór uczący, a pozostała, połączona \n",
     "# część zbioru jest wykorzystywana jako zbiór testowy)\n",
     "\n",
-    "k = 4\n",
+    "k = 10\n",
     "cv = StratifiedKFold(n_splits=k)\n",
     "model = GaussianNB()\n",
     "\n",
