--- a/lab/lab_3.ipynb
+++ b/lab/lab_3.ipynb
@@ -692,7 +692,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Redukcja wymiarowości: Metoda PCA"
+    "### Redukcja wymiarowości: Metoda PCA\n",
+    "Principal Component Analysis (PCA) to statystyczna metoda analizy danych, która przekształca dane o wysokiej wymiarowości na dane o mniejszej liczbie wymiarów. Celem PCA jest zredukowanie liczby wymiarów przy jednoczesnym zachowaniu jak największej ilości informacji zawartej w oryginalnych danych."
    ]
   },
   {
