--- a/lab/lab_3.ipynb
+++ b/lab/lab_3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,30 +45,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "warnings.filterwarnings('ignore', category=ConvergenceWarning)\n",
+    "#### Walidacja krzyżowa\n",
+    "Techniką używana do oceny skuteczności modelu uczenia maszynowego poprzez podzielenie danych na wiele podzbiorów (foldów). Pozwala na uzyskanie bardziej wiarygodnych ocen wydajności modelu, minimalizując ryzyko overfittingu oraz underfittingu\n",
+    "- Overfitting: model zbyt dobrze dopasowany do danych treningowych, ale słabo generalizujący (model jest zbyt skomplikowany i ma zbyt wiele parametrów w stosunku do liczby dostępnych danych)\n",
+    "- Underfitting: model słabo dopasowany do danych treningowych, słabo generalizujący (model jest zbyt prosty, aby uchwycić podstawowe wzorce w danych)\n",
+    "- Uśrednianie wyników: w kontekście walidacji krzyżowej oznacza, że po przeprowadzeniu wielu iteracji trenowania i testowania modelu na różnych podzbiorach danych, wyniki uzyskane w każdej iteracji są łączone i obliczana jest ich średnia. Proces ten zapewnia bardziej stabilną i wiarygodną ocenę wydajności modelu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X_test =  (360, 64)\n",
+      "Y_test =  (360,)\n",
+      "X_train =  (1437, 64)\n",
+      "Y_train =  (1437,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "warnings.filterwarnings('ignore', category=ConvergenceWarning) # ignorowanie ostrzeżeń o braku zbieżności\n",
     "\n",
     "data = load_digits()\n",
     "\n",
-    "X = data.data \n",
-    "y = data.target \n",
+    "X = data.data # features (cechy) -> używane do trenowania modelu\n",
+    "y = data.target # etykiety -> wartości, które chcemy przewidzieć\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # test_size -> 80% training and 20% test\n",
     "# random_state = 42 (służy jako ziarne losowości, aby wyniki były powtarzalne), natomiast jak wartość jest ta sama za każdym razem\n",
     "# to mamy ten sam podział\n",
     "\n",
-    "print (\"\\nX_test = \", X_test.shape)\n",
-    "print (\"Y_test = \", y_test.shape,)\n",
+    "# dane testowe \n",
+    "print (\"\\nX_test = \", X_test.shape) # (próbki, cechy)\n",
+    "print (\"Y_test = \", y_test.shape,) # (próbki, )\n",
+    "# dane treningowe \n",
     "print (\"X_train = \", X_train.shape)\n",
     "print (\"Y_train = \", y_train.shape)\n",
     "\n",
     "# Walidacja krzyżowa k - fold\n",
     "# Dzielimy na k równych podzbiorów (w których każdy z podzbiorów raz występuje jako zbiór uczący, a pozostała, połączona \n",
     "# część zbioru jest wykorzystywana jako zbiór testowy)\n",
+    "\n",
+    "# czyli dla k = 5, mamy 5 iteracji gdzie będziemy mieli podział na (w każdej iteracji) np. 4/5 zbioru treningowego i 1/5 zbioru testowego\n",
+    "# na koniec wyniki są uśredniane\n",
     "\n",
     "k = 5\n",
     "cv = StratifiedKFold(n_splits=k) # -> schemat walidacji krzyżowej"
@@ -82,6 +110,7 @@
    "source": [
     "def evaluate_model(X_train, X_test, Y_train, Y_test, model, param_grid, cv):\n",
     "    cross_val_scores = cross_val_score(model, X_train, Y_train, cv=cv, scoring='accuracy') # metryka oceny -> dokładność\n",
+    "    # zwraca wyniki walidacji krzyżowej dla każdej iteracji\n",
     "\n",
     "    # Walidacja krzyżowa - technika trenowania i testowania modelu na różnych podzbiorach danych\n",
     "    # Dostajemy procentowo jak dobrze model działa tzn jaka jest dokładność\n",
@@ -90,7 +119,9 @@
     "    print(\"Średni wynik walidacji krzyżowej: \", cross_val_scores.mean()) \n",
     "\n",
     "    # Grid Search -> wyszukanie najlepszych hiperparametrów\n",
-    "    # param grid -> określamy jakie hiperparametry chcemy przetestować\n",
+    "    # GridSearchCV przeprowadza przeszukiwanie siatki hiperparametrów na danych treningowych.\n",
+    "    # estimator=model określa, który model jest trenowany.\n",
+    "    # param_grid zawiera siatkę hiperparametrów do przetestowania\n",
     "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=cv, scoring='accuracy')\n",
     "    grid_search.fit(X_train, Y_train)\n",
     "\n",
@@ -100,14 +131,15 @@
     "\n",
     "    # Trenowanie modelu z najlepszymi hiperparametrami\n",
     "    best_model = grid_search.best_estimator_\n",
-    "    best_model.fit(X_train, Y_train)\n",
+    "    best_model.fit(X_train, Y_train) # trenowanie modelu z najlepszymi hiperparametrami\n",
     "\n",
     "    # Predykcje i ocena na zbiorze testowym\n",
-    "    y_pred = best_model.predict(X_test)\n",
+    "    y_pred = best_model.predict(X_test) # Model z najlepszymi hiperparametrami dokonuje predykcji na zbiorze testowym\n",
     "\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    print(f\"Dokładność na zbiorze testowym: {accuracy:.4f}\")\n",
-    "    print(\"Raport klasyfikacji:\\n\", classification_report(y_test, y_pred, zero_division=0))\n",
+    "    print(\"Raport klasyfikacji:\\n\", classification_report(y_test, y_pred, zero_division=0)) \n",
+    "    # raport klaasyfikacji -> precision, recall, f1-score\n",
     "\n",
     "    # Wypisanie końcowych parametrów modelu\n",
     "    print(\"Końcowe parametry modelu:\")\n",
@@ -161,8 +193,9 @@
     "\n",
     "# Poprawia wydajność modeli wrażliwych na skalowanie danych\n",
     "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "X_train = scaler.fit_transform(X_train) # oblicza średnią i odchylenie standardowe na zbiorze treningowym i przekształca dane treningowe\n",
+    "# tak aby miały średnią 0 i wariancję 1\n",
+    "X_test = scaler.transform(X_test) # przekształca dane testowe\n",
     "\n",
     "evaluate_model(X_train, X_test, y_train, y_test, model, param_grid, cv)"
    ]
@@ -628,7 +661,8 @@
    "metadata": {},
    "source": [
     "#### Selekcja cech (różne algorytmy).\n",
-    "Selekcja cech polega na wyborze podzbioru cech, które są najbardziej istotne dla danego problemu predykcyjnego. Można to zrobić na różne sposoby, np. na podstawie znaczenia cech określonego przez model lub poprzez univariate selection, gdzie każda cecha jest oceniana indywidualnie."
+    "Selekcja cech polega na wyborze podzbioru cech, które są najbardziej istotne dla danego problemu predykcyjnego. Można to zrobić na różne sposoby, np. na podstawie znaczenia cech określonego przez model lub poprzez univariate selection, gdzie każda cecha jest oceniana indywidualnie.\n",
+    "- Celem jest zredukowanie liczby cech do tych, które są najbardziej informatywne i istotne dla modelu, co może prowadzić do poprawy jego wydajności, uproszczenia modelu i zmniejszenia ryzyka przeuczenia (overfitting)."
    ]
   },
   {
@@ -664,7 +698,7 @@
     "print(\"Raport klasyfikacji (bez selekcji):\\n\", classification_report(y_test, y_pred))\n",
     "\n",
     "# Selekcja cech na podstawie znaczenia cech\n",
-    "selector = SelectFromModel(rf, prefit=True)\n",
+    "selector = SelectFromModel(rf, prefit=True) # wybiera cechy, które mają znaczenie # prefit = True, ponieważ model jest już wytrenowany\n",
     "X_train_rf = selector.transform(X_train)\n",
     "X_test_rf = selector.transform(X_test)\n",
     "\n",
@@ -676,7 +710,10 @@
     "print(\"Raport klasyfikacji (znaczenie cech):\\n\", classification_report(y_test, y_pred_rf))\n",
     "\n",
     "# Wybieranie najlepszych cech za pomocą testu ANOVA\n",
-    "selector = SelectKBest(score_func=f_classif, k=2)\n",
+    "# k - liczba cech do wybrania\n",
+    "# score_func - funkcja oceny cech\n",
+    "selector = SelectKBest(score_func=f_classif, k=2) #  wybiera k cech, które mają najwyższe wyniki dla wybranego testu statystycznego, \n",
+    "# mierząc ich zależność z docelową zmienną\n",
     "X_train_best = selector.fit_transform(X_train, y_train)\n",
     "X_test_best = selector.transform(X_test)\n",
     "\n",
@@ -717,6 +754,7 @@
     "X_test = scaler.transform(X_test)\n",
     "\n",
     "# Trenowanie modelu bez redukcji wymiarowości\n",
+    "# 100 drzew decyzyjnych\n",
     "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
     "model.fit(X_train, y_train)\n",
@@ -726,7 +764,7 @@
     "print(\"Raport klasyfikacji (bez redukcji):\\n\", classification_report(y_test, y_pred))\n",
     "\n",
     "# Redukcja wymiarowości za pomocą PCA\n",
-    "pca = PCA(n_components=2)\n",
+    "pca = PCA(n_components=2) # redukuje do 2 składowych głównych\n",
     "X_train_pca = pca.fit_transform(X_train)\n",
     "X_test_pca = pca.transform(X_test)\n",
     "\n",
