--- a/lab/lab_3.ipynb
+++ b/lab/lab_3.ipynb
@@ -139,8 +139,7 @@
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    print(f\"Dokładność na zbiorze testowym: {accuracy:.4f}\")\n",
     "    print(\"Raport klasyfikacji:\\n\", classification_report(y_test, y_pred, zero_division=0)) \n",
-    "    # raport klaasyfikacji -> precision, recall, f1-score\n",
-    "\n",
+    "    # raport klaasyfikacji (dla każdej klasy) -> precision, recall, f1-score \n",
     "    # Wypisanie końcowych parametrów modelu\n",
     "    print(\"Końcowe parametry modelu:\")\n",
     "    print(best_model.get_params())"
@@ -942,8 +941,8 @@
     "    plot_2d_clustering(X, labels, None, 'Hierarchical Clustering (2D)')  # Wizualizacja wyników Hierarchical Clustering\n",
     "\n",
     "# Uruchomienie klasteryzacji\n",
-    "clustering_1d()  # Klasteryzacja i wizualizacja dla danych 1D\n",
-    "clustering_2d()  # Klasteryzacja i wizualizacja dla danych 2D"
+    "clustering_1d()  # Klasteryzacja i wizualizacja dla danych 1D -> powinny byc dobrze rozdzielone\n",
+    "clustering_2d()  # Klasteryzacja i wizualizacja dla danych 2D -> powinny byc dobrze rozdzieline"
    ]
   },
   {
@@ -1047,7 +1046,7 @@
     "\n",
     "    # Definicja siatki hiperparametrów\n",
     "    param_grid = {\n",
-    "        'bandwidth': np.linspace(0.1, 1.0, 20),  # Zmniejszenie liczby punktów w siatce\n",
+    "        'bandwidth': np.linspace(0.1, 1.0, 20),  # Bandwidth - parametr określający szerokość jądra\n",
     "    }\n",
     "\n",
     "    # Tworzenie modelu KDE\n",
@@ -1084,8 +1083,8 @@
     "    plt.show()\n",
     "\n",
     "# Wykonanie funkcji\n",
-    "kde_1d()\n",
-    "kde_2d()"
+    "kde_1d() # Wynik -> powinny się pokazać na wykresie 3 główne piki, które odwzierciedlają trzem centrom klastrów\n",
+    "kde_2d() # Wynik -> pokazuje cztery główne regiony wysokiej gęstości, odpowiadające czterem centrom klastrów"
    ]
   },
   {
@@ -1107,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1158,7 @@
       "           0       0.42      0.51      0.46        53\n",
       "           1       0.00      0.00      0.00        50\n",
       "           2       0.26      0.77      0.39        47\n",
-      "           3       0.00      0.00      0.00        54\n",
+      "           3       1.00      0.00      0.00        54\n",
       "           4       0.59      0.68      0.64        60\n",
       "           5       0.56      0.33      0.42        66\n",
       "           6       0.31      0.28      0.29        53\n",
@@ -1168,21 +1167,9 @@
       "           9       0.34      0.64      0.44        59\n",
       "\n",
       "    accuracy                           0.36       540\n",
-      "   macro avg       0.30      0.35      0.30       540\n",
-      "weighted avg       0.32      0.36      0.32       540\n",
+      "   macro avg       0.40      0.35      0.30       540\n",
+      "weighted avg       0.42      0.36      0.32       540\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Studia_repo_uczenie_maszynowe\\env\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1517: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Studia_repo_uczenie_maszynowe\\env\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1517: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Studia_repo_uczenie_maszynowe\\env\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1517: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
